--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soco-world",
+  "name": "mud-template-react",
   "private": true,
   "scripts": {
     "build": "pnpm recursive run build",
@@ -13,7 +13,7 @@
     "test": "pnpm recursive run test"
   },
   "devDependencies": {
-    "@latticexyz/cli": "2.0.0-alpha.1.164+6d93e41f",
+    "@latticexyz/cli": "2.0.0-alpha.1.169+9e98a81c",
     "@typescript-eslint/eslint-plugin": "5.46.1",
     "@typescript-eslint/parser": "5.46.1",
     "concurrently": "^8.0.1",
