--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,34 +13,28 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/common": "2.0.0-alpha.1.164+6d93e41f",
-    "@latticexyz/dev-tools": "2.0.0-alpha.1.164+6d93e41f",
-    "@latticexyz/network": "2.0.0-alpha.1.164+6d93e41f",
-    "@latticexyz/recs": "2.0.0-alpha.1.164+6d93e41f",
-    "@latticexyz/schema-type": "2.0.0-alpha.1.164+6d93e41f",
-    "@latticexyz/std-client": "2.0.0-alpha.1.164+6d93e41f",
-    "@latticexyz/utils": "2.0.0-alpha.1.164+6d93e41f",
-    "@latticexyz/world": "2.0.0-alpha.1.164+6d93e41f",
+    "@latticexyz/common": "2.0.0-alpha.1.169+9e98a81c",
+    "@latticexyz/dev-tools": "2.0.0-alpha.1.169+9e98a81c",
+    "@latticexyz/network": "2.0.0-alpha.1.169+9e98a81c",
+    "@latticexyz/react": "2.0.0-alpha.1.169+9e98a81c",
+    "@latticexyz/recs": "2.0.0-alpha.1.169+9e98a81c",
+    "@latticexyz/schema-type": "2.0.0-alpha.1.169+9e98a81c",
+    "@latticexyz/std-client": "2.0.0-alpha.1.169+9e98a81c",
+    "@latticexyz/utils": "2.0.0-alpha.1.169+9e98a81c",
+    "@latticexyz/world": "2.0.0-alpha.1.169+9e98a81c",
     "@wagmi/chains": "^0.2.22",
     "contracts": "workspace:*",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "wait-port": "^1.0.4",
-    "@sveltejs/vite-plugin-svelte": "^2.0.2",
-    "@tsconfig/svelte": "^3.0.0",
-    "@zerodevx/svelte-toast": "^0.9.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "latest",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.0",
-    "prettier-plugin-tailwindcss": "^0.2.8",
-    "svelte": "^3.58.0",
-    "svelte-check": "^2.10.3",
-    "svelte-preprocess": "latest",
-    "tailwindcss": "latest",
-    "tslib": "^2.5.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@vitejs/plugin-react": "^3.1.0",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "vite": "^4.2.1",
+    "wait-port": "^1.0.4"
   }
 }
