--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -12,7 +12,8 @@
     "esModuleInterop": true,
     "noEmit": true,
     "skipLibCheck": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   },
   "include": ["src"]
 }
