--- a/packages/client/.prettierrc.json
+++ b/packages/client/.prettierrc.json
@@ -1,4 +1,4 @@
 {
-  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "plugins": ["prettier-plugin-tailwindcss"],
   "pluginSearchDirs": false
 }
