--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,6 +35,8 @@
     "autoprefixer": "^10.4.14",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
     "vite": "^4.2.1",
     "wait-port": "^1.0.4"
