--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mud-template-react",
+  "name": "pledger-board",
   "private": true,
   "scripts": {
     "build": "pnpm recursive run build",
