More cleaning up

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,11 +27,15 @@
     "@wagmi/chains": "^0.2.22",
     "contracts": "workspace:*",
     "ethers": "^5.7.2",
+    "mime": "^3.0.0",
+    "nft.storage": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-modal": "^3.16.1"
   },
   "devDependencies": {
+    "@types/mime": "^3.0.1",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/react-modal": "^3.16.0",
