--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,15 +14,15 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@headlessui/react": "^1.7.14",
-    "@latticexyz/common": "2.0.0-alpha.1.169+9e98a81c",
-    "@latticexyz/dev-tools": "2.0.0-alpha.1.169+9e98a81c",
-    "@latticexyz/network": "2.0.0-alpha.1.169+9e98a81c",
-    "@latticexyz/react": "2.0.0-alpha.1.169+9e98a81c",
-    "@latticexyz/recs": "2.0.0-alpha.1.169+9e98a81c",
-    "@latticexyz/schema-type": "2.0.0-alpha.1.169+9e98a81c",
-    "@latticexyz/std-client": "2.0.0-alpha.1.169+9e98a81c",
-    "@latticexyz/utils": "2.0.0-alpha.1.169+9e98a81c",
-    "@latticexyz/world": "2.0.0-alpha.1.169+9e98a81c",
+    "@latticexyz/common": "2.0.0-alpha.1.184",
+    "@latticexyz/dev-tools": "2.0.0-alpha.1.184",
+    "@latticexyz/network": "2.0.0-alpha.1.184",
+    "@latticexyz/react": "2.0.0-alpha.1.184",
+    "@latticexyz/recs": "2.0.0-alpha.1.184",
+    "@latticexyz/schema-type": "2.0.0-alpha.1.184",
+    "@latticexyz/std-client": "2.0.0-alpha.1.184",
+    "@latticexyz/utils": "2.0.0-alpha.1.184",
+    "@latticexyz/world": "2.0.0-alpha.1.184",
     "@tailwindui/react": "^0.1.1",
     "@wagmi/chains": "^0.2.22",
     "contracts": "workspace:*",
