--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "redirects": [
     {
       "source": "/",
-      "destination": "/?cache=false&mode=undefined/"
+      "destination": "/x"
     }
   ]
 }
