--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepare": "(forge --version || pnpm foundry:up)"
   },
   "devDependencies": {
-    "@latticexyz/cli": "2.0.0-alpha.1.169+9e98a81c",
+    "@latticexyz/cli": "2.0.0-alpha.1.195",
     "@typescript-eslint/eslint-plugin": "5.46.1",
     "@typescript-eslint/parser": "5.46.1",
     "concurrently": "^8.0.1",
