Add spinner for loading

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,7 +31,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.10",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
